style.css
@font-face {
    font-family: jungka;
    src: url(Jungka.otf); 
    font-weight: normal;
    font-style: normal;
}

@font-face {
    font-family: jungka;
    src: url(Jungka\ Bold.otf);
    font-weight:bold;
    font-style: normal;
}

* {
    box-sizing:border-box;
}

body {
    font-family: jungka, Arial, Helvetica, sans-serif;
    font-weight: normal;
    font-size: 16pt;
    letter-spacing: 0.15px;
    line-height:1.3em;
    padding:1em;
    background:lavender;
    position:relative;
}

body, .container {
    display: grid;
    grid-template-columns: 1fr;
    justify-content: center;
    justify-items: center;
}

.container {
    width:100%;
    max-width:1000px;
}

section {
    width:100%;
}


i {
    font-style: italic;
}

a {
    color:blue;
}

a:visited {
    color:blueviolet
}

.cap {
    text-transform: uppercase;
}

.h1 {
    font-size:2em;
    margin-top:.4em;
}

.indent {
    margin:0 4em;
}

ul {
    padding:0;
    margin:0;
}

li {
    margin-left:1em;
}

underline {
    text-decoration: underline;
}

.grid-container {
    display: grid;
    grid-template-rows: auto auto;
    /* Two rows */
    grid-template-columns: 1fr;
    /* Default to one column */
}

.row1 {
    grid-column: 1 / -1;
    /* Span across all columns */
}

.row2 {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    /* Two columns */
}

.row3 {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    /* Three columns */
}


.item {
    padding: 1em;
    border: 1px solid black;
}

.sub:not(:last-child), ul:not(:last-child) {
    margin-bottom: 1em;
}

.row1:first-child {
    color: lavender;
    background: black;
}


/* FLYING OBJECT */
.flier {
    pointer-events: none;
}

.flier>* {
    /* Adjust animation duration to change the element’s speed */
    animation: fly 100s linear infinite;
    pointer-events: none !important;
    top: 0;
    left: 0;
    transform: translateX(-120%) translateY(-120%) rotateZ(0);
    position: fixed;
    animation-delay: 1s;
    z-index: 999999;
}

@keyframes fly {
    98.001%,
    0% {
        display: block;
        transform: translateX(-200%) translateY(100vh) rotateZ(0deg)
    }

    15% {
        transform: translateX(100vw) translateY(-100%) rotateZ(180deg)
    }

    15.001%,
    18% {
        transform: translateX(100vw) translateY(-30%) rotateZ(0deg)
    }

    40% {
        transform: translateX(-200%) translateY(3vh) rotateZ(-180deg)
    }

    40.001%,
    43% {
        transform: translateX(-200%) translateY(-100%) rotateZ(-180deg)
    }

    65% {
        transform: translateX(100vw) translateY(50vh) rotateZ(0deg)
    }

    65.001%,
    68% {
        transform: translateX(20vw) translateY(-200%) rotateZ(180deg)
    }

    95% {
        transform: translateX(10vw) translateY(100vh) rotateZ(0deg)
    }
}

/* MEDIA QUERIES */
@media (max-width: 1000px) {
    body {
        padding: .5em;
    }
    .row2 {
            display: grid;
            grid-template-columns: 1fr;
            row-gap:1em;
        }
    .row3 {
        grid-template-columns: 1fr;
        /* Ensure single column layout on small screens */
            row-gap:1em;
    }
    .indent {
        margin: 0 0em;
    }
}

